--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,6 @@
-ErrorDocument 404 /error-db.html
+ErrorDocument 404 /error-404.php
+
+RewriteEngine On
+
+RewriteCond %{REQUEST_URI} !^/public/
+RewriteRule ^(.*)$ /public/$1 [L,R=301]
